Avoid light blue text on a dark blue background
This makes it hard to read on less-than-ideal screen condtions.

--- a/assets/css/style-freenet.css
+++ b/assets/css/style-freenet.css
@@ -212,7 +212,6 @@ padding-top: 7em;
 
 #home .donate p {
 font-style: italic;
-color: rgb(40, 141, 203);
 }
 
 #home .download {
@@ -238,7 +237,6 @@ font-family: 'Oswald', sans-serif;
 }
 
 #carousel-slider p {
-color: rgb(40, 141, 203);
 font-size: 16px;
 line-height: 25px;
 margin: 25px 20px;
